      forces the package to be installed/loaded with \code{keep.source =
	TRUE} (or \code{FALSE}).   This applies at package installation
      time for packages using lazy-loading.  (Suggestion of Greg Snow.)

      There are corresponding options \option{--with-keep.source} and
      \option{--without-keep.source} for \command{R CMD INSTALL} for
      packages using lazy-loading.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives an error if the \R code in a
      vignette fails to run, unless this is caused by a missing package.

      It now unpacks tarballs in the same way as \command{R CMD
	INSTALL}, including making use of the environment variable
      \env{R_INSTALL_TAR} to override the default behaviour.

      \item The default for the environment variable
      \env{_R_CHECK_COMPACT_DATA2_} is now true, so if using the newer
      forms of compression introduced in \R 2.10.0 would be beneficial
      is checked by default.

      \item \command{R CMD Rd2dvi} allows the use of LaTeX package
      \samp{inputenx} rather than \samp{inputenc}: the value of the
      environment variable \env{RD2DVI_INPUTENC} is used.  (LaTeX package
      \samp{inputenx} is an optional install which provides greater
      coverage of the UTF-8 encoding.)

      \item \command{Rscript} on a Unix-alike now accepts file names
      containing spaces (if these are escaped or quoted in the shell).

      \item \command{R CMD build} on a Unix-alike (only) now tries to
      preserve dates on files it copies from its input directory.  (This
      was the undocumented behaviour prior to \R 2.13.0.)
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \code{require()} no longer has a \code{save} argument.

      \item The \code{gamma} argument to \code{hsv()},
      \code{rainbow()}, and \code{rgb2hsv()} has been removed.

      \item The \option{--no-docs} option for